--- a/ProyectoConsultorio/Form2.resx
+++ b/ProyectoConsultorio/Form2.resx
@@ -117,19 +117,80 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="PersonasBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>172, 17</value>
+  <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
   </metadata>
-  <metadata name="PersonasBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>172, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="agregarRadiografia.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAiJJREFUOE+tlN9rUmEcxs+sgTZcJAYFrbVVbDSd4epi3XTnXWx0M/ZHeBFsOL1I
+        54oCHbTLSouIRTVnHjrO/ShzG2NbDZRAxygIFNLqrn/g6bwvr+979LhmtA88HM95n+9zvt+X1yPhkKkJ
+        LJfLkGUZyWRyXymKgnQ6zSr08MBcLgdJkpqW2+1mlbXwQK/XS41n3F6c891H58Rdnbr802gfvM5DPR4P
+        qxbwQL/fT029T2X0v92E/c26To7UDjpu3eaBJpOJVQt4YCAQoKaeh3OwxzKwx9cahvbLG7ia/Q7JfBwn
+        LRZWLWgY6FC20BV8gE7PnZqRz45Nwhb7gMsr6n6b2mC1nGDVAl1gbySOS7MpPla9rMOjcK7vNR9Y7bA7
+        OHM4HdI9jK/CubaLgY0vtBuyb9U97Hv1Dj0LO5CMx5oMfDxPu6iOSNT3cgW21+/RPbuE088WMPX1B6SW
+        FrQePcKqBfrARzF6bMwDg2izO2G+co121vF8ESPL28wNTIfDCIVC7E7QeOT5DBzJj+q5+6Ret3HhxTKG
+        UpvM+XcaB6rn0KbuFREZ1/JEYS5B+J861AReVLu7ubjFXAKj0UhVDw/c7693fi6D4OdvzAVEo1Hq0yoS
+        ibBVTaDP56OL9R+HU+NTuHFvBr9//aS+fD4Pl8sFg8FARX4XCgW6RuCB2WxW9+Z6aTlwZEKlUkEikdB9
+        VMkzsqalWCyiVCqxO0Hta/8b4A/9T5ClG2ElnAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="agregarTomografia.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAiJJREFUOE+tlN9rUmEcxs+sgTZcJAYFrbVVbDSd4epi3XTnXWx0M/ZHeBFsOL1I
+        54oCHbTLSouIRTVnHjrO/ShzG2NbDZRAxygIFNLqrn/g6bwvr+979LhmtA88HM95n+9zvt+X1yPhkKkJ
+        LJfLkGUZyWRyXymKgnQ6zSr08MBcLgdJkpqW2+1mlbXwQK/XS41n3F6c891H58Rdnbr802gfvM5DPR4P
+        qxbwQL/fT029T2X0v92E/c26To7UDjpu3eaBJpOJVQt4YCAQoKaeh3OwxzKwx9cahvbLG7ia/Q7JfBwn
+        LRZWLWgY6FC20BV8gE7PnZqRz45Nwhb7gMsr6n6b2mC1nGDVAl1gbySOS7MpPla9rMOjcK7vNR9Y7bA7
+        OHM4HdI9jK/CubaLgY0vtBuyb9U97Hv1Dj0LO5CMx5oMfDxPu6iOSNT3cgW21+/RPbuE088WMPX1B6SW
+        FrQePcKqBfrARzF6bMwDg2izO2G+co121vF8ESPL28wNTIfDCIVC7E7QeOT5DBzJj+q5+6Ret3HhxTKG
+        UpvM+XcaB6rn0KbuFREZ1/JEYS5B+J861AReVLu7ubjFXAKj0UhVDw/c7693fi6D4OdvzAVEo1Hq0yoS
+        ibBVTaDP56OL9R+HU+NTuHFvBr9//aS+fD4Pl8sFg8FARX4XCgW6RuCB2WxW9+Z6aTlwZEKlUkEikdB9
+        VMkzsqalWCyiVCqxO0Hta/8b4A/9T5ClG2ElnAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="agregarResonancia.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAAiJJREFUOE+tlN9rUmEcxs+sgTZcJAYFrbVVbDSd4epi3XTnXWx0M/ZHeBFsOL1I
+        54oCHbTLSouIRTVnHjrO/ShzG2NbDZRAxygIFNLqrn/g6bwvr+979LhmtA88HM95n+9zvt+X1yPhkKkJ
+        LJfLkGUZyWRyXymKgnQ6zSr08MBcLgdJkpqW2+1mlbXwQK/XS41n3F6c891H58Rdnbr802gfvM5DPR4P
+        qxbwQL/fT029T2X0v92E/c26To7UDjpu3eaBJpOJVQt4YCAQoKaeh3OwxzKwx9cahvbLG7ia/Q7JfBwn
+        LRZWLWgY6FC20BV8gE7PnZqRz45Nwhb7gMsr6n6b2mC1nGDVAl1gbySOS7MpPla9rMOjcK7vNR9Y7bA7
+        OHM4HdI9jK/CubaLgY0vtBuyb9U97Hv1Dj0LO5CMx5oMfDxPu6iOSNT3cgW21+/RPbuE088WMPX1B6SW
+        FrQePcKqBfrARzF6bMwDg2izO2G+co121vF8ESPL28wNTIfDCIVC7E7QeOT5DBzJj+q5+6Ret3HhxTKG
+        UpvM+XcaB6rn0KbuFREZ1/JEYS5B+J861AReVLu7ubjFXAKj0UhVDw/c7693fi6D4OdvzAVEo1Hq0yoS
+        ibBVTaDP56OL9R+HU+NTuHFvBr9//aS+fD4Pl8sFg8FARX4XCgW6RuCB2WxW9+Z6aTlwZEKlUkEikdB9
+        VMkzsqalWCyiVCqxO0Hta/8b4A/9T5ClG2ElnAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="agregarOtro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAAiJJREFUOE+tlN9rUmEcxs+sgTZcJAYFrbVVbDSd4epi3XTnXWx0M/ZHeBFsOL1I
+        54oCHbTLSouIRTVnHjrO/ShzG2NbDZRAxygIFNLqrn/g6bwvr+979LhmtA88HM95n+9zvt+X1yPhkKkJ
+        LJfLkGUZyWRyXymKgnQ6zSr08MBcLgdJkpqW2+1mlbXwQK/XS41n3F6c891H58Rdnbr802gfvM5DPR4P
+        qxbwQL/fT029T2X0v92E/c26To7UDjpu3eaBJpOJVQt4YCAQoKaeh3OwxzKwx9cahvbLG7ia/Q7JfBwn
+        LRZWLWgY6FC20BV8gE7PnZqRz45Nwhb7gMsr6n6b2mC1nGDVAl1gbySOS7MpPla9rMOjcK7vNR9Y7bA7
+        OHM4HdI9jK/CubaLgY0vtBuyb9U97Hv1Dj0LO5CMx5oMfDxPu6iOSNT3cgW21+/RPbuE088WMPX1B6SW
+        FrQePcKqBfrARzF6bMwDg2izO2G+co121vF8ESPL28wNTIfDCIVC7E7QeOT5DBzJj+q5+6Ret3HhxTKG
+        UpvM+XcaB6rn0KbuFREZ1/JEYS5B+J861AReVLu7ubjFXAKj0UhVDw/c7693fi6D4OdvzAVEo1Hq0yoS
+        ibBVTaDP56OL9R+HU+NTuHFvBr9//aS+fD4Pl8sFg8FARX4XCgW6RuCB2WxW9+Z6aTlwZEKlUkEikdB9
+        VMkzsqalWCyiVCqxO0Hta/8b4A/9T5ClG2ElnAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="PACIENTESDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>249, 18</value>
   </metadata>
-  <metadata name="PACIENTESDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="PersonasBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>401, 18</value>
   </metadata>
   <metadata name="PersonasTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>351, 17</value>
+    <value>579, 18</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>50</value>
   </metadata>
 </root>
